--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mobx": "5.14.0",
-    "mobx-react": "6.1.4",
+    "mobx": "5.13.0",
+    "mobx-react": "^5.4.4",
     "mobx-state-tree": "^3.14.1",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "recompose": "^0.27.1"
   },
   "scripts": {
     "start": "react-scripts start",
